k8s/discord.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: discord-bot
  template:
    metadata:
      labels:
        app: discord-bot
    spec:
      containers:
      - name: discord_bot
        image: krmp-d2hub-idock.9rum.cc/dev-test/repo_ce2ccf0ab09b
        ports:
        - containerPort: 8000
          name: fastapi
