k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - name: fastapi
      port: 8000
      targetPort: 8000
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    app: backend
